Magically cloning all mut collections (for now)